# libaffa

./: CMakeLists.txt
examples/: CMakeLists.txt  example2.cpp
src/: aa_aaf.h  aa_aaftrigo.cpp  aa_interval.cpp
